# showcase-django

./: .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: main.yml
backend/: manage.py
backend/images/: urls.py  views.py
backend/showcase_django/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test_domain.py
frontend/: package-lock.json
frontend/pages/: index.tsx
frontend_react/: package-lock.json  package.json
nextjs_frontend/: package.json
nextjs_frontend/pages/: index.tsx
nextjs_frontend/styles/: Home.module.css  globals.css
