[tool.poetry]
name = "showcase-django"
version = "0.1.0"
description = "Django pipeline showcase"
authors = ["Nico Guettler"]

[tool.poetry.dependencies]
python = "^3.10.2"
attrs = "^21.4.0"
pydantic = "^1.9.1"
Django = "^4.1.2"
psycopg2 = "^2.9.4"
django-nextjs = "^2.2.1"
waitress = "^2.1.2"
whitenoise = "^6.2.0"
click = "^8.1.3"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

